// import configureStore from 'redux-mock-store';
// import * as actionTypes from "../constants/actionTypes";

// import reducer from './businessReducer';
// import {initialState} from './businessReducer'

// const mockStore = configureStore();
// const store = mockStore();

// describe('businessReducer', () => {

//     beforeEach(() => { // Runs before each test in the suite
//         store.clearActions();
//     });

//     // it("should return the initial state", () => {
//     //    expect(reducer(undefined, {})).toEqual(state);
//     // })

//     // it('should return the initial state', () => {
//     //     expect(reducer(undefined, {})).toMatchSnapshot()
//     //   })

//     // it('should handle MAKE_PAPERCLIP', () => {
//     //     expect(reducer(initialState,{type: 'MAKE_PAPERCLIP'})).toMatchSnapshot()
//     // })

//     // it("should add 1 paperclips, add 1 to unsoldInventory and subtract 1 from wire", () => {
//     //     expect(reducer(initialState, {type: actionTypes.MAKE_PAPERCLIP})).toEqual(
//     //         {
//     //            ...initialState,
//     //            paperClips: 1,
//     //            unsoldInventory: 1,
//     //            wire: 49
//     //         }
//     //        );
//     //  })


// });
