// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`businessReducer should handle MAKE_PAPERCLIP 1`] = `
Object {
  "autoClipperInitPrice": 0,
  "autoClipperOn": false,
  "autoClipperPrice": 6.1,
  "autoClippersButtonDisabled": true,
  "autoClippersPerSec": 0,
  "autoPaperclips": 0,
  "autoWireBuyerIsOn": true,
  "cards": Array [],
  "changedToQOps": false,
  "chips": Array [],
  "chosenListDropdown": Array [
    "Low Risk",
    "Pick a Start",
  ],
  "clipsPerSec": 0,
  "clipsToBuyTrust": 3000,
  "comments": Array [
    "Welcome to Universal Paperclips",
  ],
  "creativity": 0,
  "creativityTurnOn": false,
  "currentQOps": -360,
  "delay": 1000,
  "delayAutoPaperClippers": 1000,
  "delayUnsoldInventary": 4375,
  "delayUnsoldInventaryConst": 700,
  "delayUpdatingInvLines": 5000,
  "delayUpdatingInvScreen": 10000,
  "fakeInvestmentsCash": 0,
  "funds": 100,
  "investmentsCash": 0,
  "investmentsLines": Array [
    "",
    "",
    "",
    "",
    "",
  ],
  "investmentsStocks": 0,
  "investmentsTotal": 0,
  "listInvestments": Array [
    "Low Risk",
    "Med Risk",
    "High Risk",
  ],
  "listStrategicModeling": Array [
    "Pick a Start",
    "RANDOM",
  ],
  "makePaperclipDisabled": false,
  "marketingButtonDisabled": true,
  "marketingCost": 100,
  "marketingLevel": 1,
  "maxPublicDemand": 800,
  "megaClippersIsShown": false,
  "noWire": false,
  "ops": 0,
  "opsMax": 10,
  "paperClips": 1,
  "paperclipPrice": 1000000000,
  "prevTrust": 3000,
  "processorsMemory": 1,
  "processorsNumber": 1,
  "publicDemand": 16,
  "revTracker": false,
  "risk": "lowRisk",
  "showChip": false,
  "showDropdownInvestments": false,
  "showDropdownStrategicModeling": false,
  "showInvestmentEngine": true,
  "showQCompMessage": 0,
  "showQuantumComputing": false,
  "showStrategicModeling": true,
  "time": 0,
  "trust": 2,
  "unsoldInventory": 1,
  "wire": 49,
  "wireButtonDisabled": true,
  "wireBuyerIsShown": false,
  "wireBuyerProjectIsShown": false,
  "wirePrice": 20,
  "wireToAdd": 1000,
}
`;

exports[`businessReducer should return the initial state 1`] = `
Object {
  "autoClipperInitPrice": 0,
  "autoClipperOn": false,
  "autoClipperPrice": 6.1,
  "autoClippersButtonDisabled": true,
  "autoClippersPerSec": 0,
  "autoPaperclips": 0,
  "autoWireBuyerIsOn": true,
  "cards": Array [],
  "changedToQOps": false,
  "chips": Array [],
  "chosenListDropdown": Array [
    "Low Risk",
    "Pick a Start",
  ],
  "clipsPerSec": 0,
  "clipsToBuyTrust": 3000,
  "comments": Array [
    "Welcome to Universal Paperclips",
  ],
  "creativity": 0,
  "creativityTurnOn": false,
  "currentQOps": -360,
  "delay": 1000,
  "delayAutoPaperClippers": 1000,
  "delayUnsoldInventary": 4375,
  "delayUnsoldInventaryConst": 700,
  "delayUpdatingInvLines": 5000,
  "delayUpdatingInvScreen": 10000,
  "fakeInvestmentsCash": 0,
  "funds": 100,
  "investmentsCash": 0,
  "investmentsLines": Array [
    "",
    "",
    "",
    "",
    "",
  ],
  "investmentsStocks": 0,
  "investmentsTotal": 0,
  "listInvestments": Array [
    "Low Risk",
    "Med Risk",
    "High Risk",
  ],
  "listStrategicModeling": Array [
    "Pick a Start",
    "RANDOM",
  ],
  "makePaperclipDisabled": false,
  "marketingButtonDisabled": true,
  "marketingCost": 100,
  "marketingLevel": 1,
  "maxPublicDemand": 800,
  "megaClippersIsShown": false,
  "noWire": false,
  "ops": 0,
  "opsMax": 10,
  "paperClips": 0,
  "paperclipPrice": 1000000000,
  "prevTrust": 3000,
  "processorsMemory": 1,
  "processorsNumber": 1,
  "publicDemand": 16,
  "revTracker": false,
  "risk": "lowRisk",
  "showChip": false,
  "showDropdownInvestments": false,
  "showDropdownStrategicModeling": false,
  "showInvestmentEngine": true,
  "showQCompMessage": 0,
  "showQuantumComputing": false,
  "showStrategicModeling": true,
  "time": 0,
  "trust": 2,
  "unsoldInventory": 0,
  "wire": 50,
  "wireButtonDisabled": true,
  "wireBuyerIsShown": false,
  "wireBuyerProjectIsShown": false,
  "wirePrice": 20,
  "wireToAdd": 1000,
}
`;
